fix alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
 .tagline > a {
     padding-left: 12px;
     padding-right: 12px;
-    background-color: rgba(1, 25, 54, 0.3);
+    background-color: rgba(255, 112, 67, 0.7);
     color: #F7FDF5;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
@@ -32,7 +32,7 @@
     height: 45px;
     margin-bottom: 45px;
     display: inline-block;
-    background: rgba(141, 199, 63, 0.5);
+    background: rgba(243, 229, 245, 0.7);
 }
 
 #flip div:first-child {
@@ -42,12 +42,12 @@
 }
 
 #flip div:first-child div {
-    background: rgba(51, 147, 0, 0.5);
+    background: rgba(255, 224, 178, 0.7);
     color: #F7FDF5;
 }
 
 #flip div:last-child div {
-    background: rgba(35, 102, 2, 0.5);
+    background: rgba(0, 188, 212, 0.7);
     color: #F7FDF5; /* Complementary color to the background */
 }
 
@@ -88,7 +88,7 @@
         padding-top: 10px;
     }
 
-    @keyframes show {
+    @keyframes slide {
         0% {
             margin-top: -240px;
         }
